# ceo-agent-botmux

./: Agent.md  README.md  pyproject.toml
agents/: ceo-agent.identity.md  devops-agent.identity.md  novel-continuity-validator.identity.md  novel-creative-architect.identity.md  novel-director-curator.identity.md  rental-agent.identity.md  team-operating-contract.md  tech-design-agent.identity.md  validation-agent.identity.md
botmux_doubao/: __init__.py  cdp_app.py  cli.py  runtime.py
botmux_novel/: __init__.py  agents.py  approval.py  approval_check.py  bootstrap.py  botmux_assets.py  chapter_goals.py  chapter_workflow_import.py  cli.py  fanqie_export.py  foundation_paths.py  handoff_commands.py  llmwiki_sync.py  mcp_config.py  project_template.py  readiness.py  runtime.py  schema_validation.py  series.py  wiki_lint.py  workflow_commands.py  workflow_export.py  workflow_import.py  workspace.py
docs/: novel-creation-agent-team-tech-plan.md  novel-llmwiki-setup.md
features/: index.md
schemas/: approval-package.schema.json  chapter-blueprint.schema.json  character-state.schema.json  fact-snapshot.schema.json  foreshadowing-ledger.schema.json  next-chapter-command.schema.json  project-state.schema.json  relationship-map.schema.json  run-trace.schema.json  scene-setting.schema.json  story-bible.schema.json  style-profile.schema.json
tests/: test_botmux_assets.py  test_doubao_cli.py  test_novel_approval.py  test_novel_bootstrap.py  test_novel_chapter_workflow_import.py  test_novel_mcp_config.py  test_novel_publish.py  test_novel_readiness.py  test_novel_runtime.py  (+4 more)
(+63 files in other folders)
